--- a/src/components/JobList.css
+++ b/src/components/JobList.css
@@ -13,7 +13,7 @@
   border-radius: 8px;
   margin: 10px 0;
   padding: 15px;
-  width: 100%; /* Ensure it takes up the full width */
+  width: 100%;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
   position: relative;
@@ -73,7 +73,7 @@
 }
 
 .job-details p {
-  font-size: 0.8em;
+  font-size: 0.5em;
   color: #666;
   margin-bottom: 8px;
 }
@@ -95,4 +95,49 @@
 .suggestion-item {
   display: flex;
   align-items: center;
+}
+
+.load-more-container {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+}
+
+.load-more-button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.load-more-button:hover {
+  background-color: #0056b3;
+}
+
+.loading-spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+}
+
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border-left-color: #09f;
+  animation: spin 1s ease infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
