--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-top: 120px; /* Adjust this value to match the height of your search form */
 }
 
 form {
@@ -59,4 +60,16 @@ a {
   padding: 10px;
   margin-top: 10px;
   border-radius: 5px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Arial", sans-serif;
+  background-color: #2b2b2b;
+  color: #f1f1f1;
+}
+
+.content {
+  padding: 20px;
 }
